<?php

namespace App\Http\Controllers;

use App\Models\Vulnerability;
use App\Services\AiFixService;
use Illuminate\Http\JsonResponse;

class VulnerabilityController extends Controller
{
    public function fix(Vulnerability $vulnerability): JsonResponse
    {
        $aiService = app(AiFixService::class);
        $aiFix = $aiService->generateFix($vulnerability);

        return response()->json([
            'id' => $vulnerability->id,
            'severity' => $vulnerability->severity,
            'severity_color' => $vulnerability->severity_color,
            'severity_emoji' => $vulnerability->severity_emoji,
            'owasp_category' => $vulnerability->owasp_category,
            'owasp_label' => $vulnerability->owasp_label,
            'tool' => $vulnerability->tool,
            'file_path' => $vulnerability->file_path,
            'line_start' => $vulnerability->line_start,
            'message' => $vulnerability->message,
            'fix_suggestion' => $vulnerability->fix_suggestion,
            'code_snippet' => $vulnerability->code_snippet,
            'ai_fix' => $aiFix,
            'chat_explanation' => $vulnerability->chat_explanation,
        ]);
    }

    public function generateFixes(\Illuminate\Http\Request $request): JsonResponse
    {
        $request->validate([
            'vulnerability_ids' => 'required|array',
            'vulnerability_ids.*' => 'exists:vulnerabilities,id',
        ]);

        $ids = $request->input('vulnerability_ids');
        $vulns = Vulnerability::whereIn('id', $ids)->get();

        $aiService = app(AiFixService::class);
        $aiService->generateFixesForMany($vulns);

        return response()->json([
            'success' => true,
            'message' => 'Fixes generated successfully for ' . count($ids) . ' vulnerabilities.',
        ]);
    }

    public function saveFix(\Illuminate\Http\Request $request, Vulnerability $vulnerability): JsonResponse
    {
        $request->validate(['ai_fix' => 'required|string|max:10000']);
        $vulnerability->update(['ai_fix' => $request->input('ai_fix')]);

        return response()->json([
            'success' => true,
            'message' => 'Fix sauvegardé avec succès.',
        ]);
    }

    public function clearExplanation(Vulnerability $vulnerability): JsonResponse
    {
        $vulnerability->update(['chat_explanation' => null]);

        return response()->json([
            'success' => true,
            'message' => 'Explication supprimée avec succès.',
        ]);
    }
}
