<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\BelongsTo;

class Vulnerability extends Model
{
    protected $fillable = [
        'scan_id',
        'tool',
        'check_id',
        'file_path',
        'line_start',
        'severity',
        'message',
        'owasp_category',
        'owasp_label',
        'fix_suggestion',
        'selected',
        'ai_fix',
        'code_snippet',
        'chat_explanation',
    ];

    protected $casts = [
        'selected' => 'boolean',
        'line_start' => 'integer',
    ];

    public function scan(): BelongsTo
    {
        return $this->belongsTo(Scan::class);
    }

    public function getSeverityColorAttribute(): string
    {
        return match ($this->severity) {
            'critical' => '#ef4444',
            'high' => '#f97316',
            'medium' => '#eab308',
            'low' => '#3b82f6',
            default => '#6b7280',
        };
    }

    public function getSeverityEmojiAttribute(): string
    {
        return match ($this->severity) {
            'critical' => '🔴',
            'high' => '🟠',
            'medium' => '🟡',
            'low' => '🔵',
            default => '⚪',
        };
    }
}
